<resources>
    <string name="app_name">Yasma</string>
    <string name="title_posts">Posts</string>
    <string name="title_albums">Albums</string>
</resources>
